comment feature 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,16 @@ layout: page
   <div class="post_comment">
 
     {% include disqus.html username = site.disqus.shortname %}
+    <div id="disqus_thread"></div>
+      <script>
+        (function() { // DON'T EDIT BELOW THIS LINE
+          var d = document, s = d.createElement('script');
+          s.src = 'https://uzun-dev.disqus.com/embed.js';
+          s.setAttribute('data-timestamp', +new Date());
+          (d.head || d.body).appendChild(s);
+        })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
   </div>
   {% endif %}
