header design 수정

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -185,6 +185,7 @@ img {
         img {
             float: none;
         }
+    
     }
     }
 
@@ -432,7 +433,7 @@ img {
 }
 
 .nav_list {
-    margin: 0;
+    margin: 6px;
     padding: 0;
     list-style: none;
 
