--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -33,7 +33,7 @@
     --footer_font: #858585;
     --footer_font_a: #000;
     --border_radius: 15px;
-
+    --acyearbg:  #fff4b4;
 }
 
 @mixin darkMode {
@@ -58,6 +58,7 @@
     --blockquote: #CACCCE;
     --footer_font_a: #d1d1d1;
     --border_radius: 1px;
+    --acyearbg:  #27221f;
 }
 
 
@@ -291,6 +292,10 @@ img {
     font-size: 1.2rem;
     margin-top: 1.4rem;
     margin-bottom: 0.6rem;
+    background-color:var(--acyearbg);
+    width: fit-content;
+    border-radius: 6%;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.08)  ;
 }
 
 
