--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -465,7 +465,7 @@ img {
     @include mobile-only {
 
         &:after {
-            content: '/';
+            content: '·';
             color: var(--nav_font);
         }
 
