--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,7 +28,7 @@
     --post_h3: #4c4c4c;
     --post_link: #46a891;
     --post_link_hover: #87CDBD;
-    --inlinecode_text: #FFAA00;
+    --inlinecode_text: #e96900;
     --blockquote: #333;
     --footer_font: #858585;
     --footer_font_a: #000;
@@ -630,10 +630,11 @@ img {
 
     code {
         color: var(--inlinecode_text);
-        padding: .1em .4em;
-        border-radius: 5px;
+        padding: .2em .4em;
+        border-radius: 3px;
         font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
         font-size: .85rem;
+        background-color: #f3f3f3
     }
 
     pre code {
