--- a/_includes/mobile_menu.html
+++ b/_includes/mobile_menu.html
@@ -3,7 +3,7 @@
   <ul class="nav_list">
     {% if site.user.aboutme %}
     <li class="nav_item">
-      <span style="color:#8d7edc;">· </span><a href="{{ site.baseurl }}/aboutme" style="color: blueviolet;font-weight: 600;">about</a>
+      <span style="color:#8d7edc;">· </span><a href="{{ site.baseurl }}/archive" style="color: blueviolet;font-weight: 600;">Archive</a>
     </li>
     <br />
 
