--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       {% if site.user.aboutme %}
       <ul class="nav_list">
         <li class="nav_item">
-          <a href="{{ site.baseurl }}/aboutme"><h4 style="color: blueviolet;">About Me</h4></a>
+          <a href="{{ site.baseurl }}/archive"><h4 style="color: blueviolet;">Archive</h4></a>
         </li>
       </ul>
       {% endif %}
