overall layout update for mobile

--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -25,7 +25,7 @@
 {% else %}
 <div class="archive">
   <h1>Archive</h1>
-  <h3 style="color: rgb(70, 70, 70);font-weight: 540;
+  <h3 style="font-weight: 540;
   font-style: normal;
   font-family: -apple-system, BlinkMacSystemFont, 'Titillium Web', 'Segoe UI', Roboto, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'";>모든 글 보기</h3>
   <br />
