--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,6 +11,7 @@
     {% include mobile_menu.html %}
     
     <main class="main">
+      <hr class="onlymobile" style="margin-top:25px;width:30px;border:1px groove rgba(240, 240, 240, 0.63);" />
       {{ content }}
     </main>
 
