--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -150,6 +150,7 @@ img {
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
+    /*
     &.l{float:left};
     &.l1{float:left;width:10%;};
     &.l2{float:left;width:20%;};
@@ -173,17 +174,25 @@ img {
     &.r9{float:right;width:90%;};
     &.rf{float:right;width:100%;};
     &.c{display:block;margin:0 auto};
-    &.c2{display:block;margin:0 auto;width:20%;};
-    &.c1{display:block;margin:0 auto;width:10%;};
-    &.c3{display:block;margin:0 auto;width:30%;};
-    &.c4{display:block;margin:0 auto;width:40%;};
-    &.c5{display:block;margin:0 auto;width:50%;};
-    &.c6{display:block;margin:0 auto;width:60%;};
-    &.c7{display:block;margin:0 auto;width:70%;};
-    &.c8{display:block;margin:0 auto;width:80%;};
-    &.c9{display:block;margin:0 auto;width:90%;};
-    &.cf{display:block;margin:0 auto;width:100%;};
-}    
+    */
+    &.q{display:block;margin:0 auto;width:10%;};
+    &.w{display:block;margin:0 auto;width:20%;};
+    &.e{display:block;margin:0 auto;width:30%;};
+    &.r{display:block;margin:0 auto;width:40%;};
+    &.t{display:block;margin:0 auto;width:50%;};
+    &.y{display:block;margin:0 auto;width:60%;};
+    &.u{display:block;margin:0 auto;width:70%;};
+    &.i{display:block;margin:0 auto;width:80%;};
+    &.o{display:block;margin:0 auto;width:90%;};
+    &.p{display:block;margin:0 auto;width:100%;};
+}  
+
+img + em {
+    display: block;
+    text-align: center;
+    color:grey;
+    padding-bottom:10px; 
+  }
 
 .content {
     margin: 1.4em auto;
@@ -226,9 +235,11 @@ img {
     @include breakpoint(medium) {
         margin-left: 18rem;
         padding: 2rem;
+        min-height: 760px;
     }
     @include mobile-only {
         padding: 0.8rem;
+        min-height: 650px;
     }
 }
 
@@ -278,6 +289,17 @@ img {
     margin-top: 7rem;
 }
 
+h1.onlymobile, h3.onlymobile {
+    @include mobile-only {
+        text-align: center;
+    }
+}
+
+hr.onlymobile {
+    @include breakpoint(medium) {
+        display: none;
+    }
+}
 
 /* 2. Archive
    ========================================================================== */
@@ -294,8 +316,13 @@ img {
         padding: 0;
 
         li {
-            margin-bottom: 0.6rem;
+            margin-top: 0.8rem;
         }
+
+        @include mobile-only {
+            margin:0 6%;
+        }
+        
     }
 
     & a {
@@ -308,7 +335,16 @@ img {
         }
     }
 
-    @include breakpoint(medium) {
+    hr {
+        border:1px groove rgba(240, 240, 240, 0.185);
+        margin: auto;
+        @include mobile-only {
+            width:88%;
+            margin-top:15px;
+        }
+    }
+
+    @include breakpoint(medium)  {
         max-width: 36rem;
         margin: 4rem auto;
     
@@ -327,6 +363,9 @@ img {
     @include breakpoint(medium) {
         float: right;
     }
+    @include mobile-only {
+        font-size: 15px;
+    }
 }
 
 .archive_title {
@@ -334,22 +373,34 @@ img {
     @include breakpoint(medium) {
         max-width: 80%;
     }
+    @include mobile-only {
+        margin-top: 5px;
+    }
 }
 
 .archive_type {
     font-size: 2rem;
     font-weight: bold;
     margin-bottom: 3rem;
+    @include mobile-only {
+        text-align: center;
+    }
 }
 
 .archive_year {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+    font-weight: 600;
+    font-style: italic;
+    color: var(--name_font);
     margin-top: 1.4rem;
     margin-bottom: 0.6rem;
-    background-color:var(--acyearbg);
-    width: fit-content;
-    border-radius: 6%;
-    box-shadow: 0 6px 12px rgba(0,0,0,0.08)  ;
+    @include mobile-only {
+        text-align: center;
+    }
+    // background-color:var(--acyearbg);
+    // width: fit-content;
+    // border-radius: 6%;
+    // box-shadow: 0 6px 12px rgba(0,0,0,0.08)  ;
 }
 
 
@@ -697,7 +748,7 @@ img {
 
 
     img {
-        border-radius: 5px;
+        border-radius: 15px;
     }
 
     hr {
