code color change

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,7 +34,7 @@
     --footer_font_a: #000;
     --border_radius: 15px;
     --acyearbg:  #fff4b4;
-    --code_color: #f3f3f3;
+    --code_color: #303030;
     --pre_color: #f7f7f7;
 }
 
@@ -61,7 +61,7 @@
     --footer_font_a: #d1d1d1;
     --border_radius: 1px;
     --acyearbg:  #27221f;
-    --code_color: #4d4d4d;
+    --code_color: #303030;
     --pre_color: #404040;
 }
 
