--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,9 @@
 
   <!-- font -->
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,400i" rel="stylesheet">
+  
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/styles/dracula.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.11.0/highlight.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.6.0/languages/cpp.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script> -->
 </head>
