--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,7 +28,7 @@
     --post_h3: #4c4c4c;
     --post_link: #46a891;
     --post_link_hover: #87CDBD;
-    --inlinecode_text: #e06500;
+    // --inlinecode_text: #e06500;
     --blockquote: rgb(248, 249, 250);
     --footer_font: #858585;
     --footer_font_a: #000;
@@ -57,7 +57,7 @@
     --post_h3: #fff;
     --post_link: #8d7edc;
     --post_link_hover: #D4CEF2;
-    --inlinecode_text: #ff8800;
+    // --inlinecode_text: #ff8800;
     --blockquote: #464646;
     --footer_font_a: #d1d1d1;
     --border_radius: 1px;
@@ -735,31 +735,73 @@ hr.onlymobile {
         margin-bottom: 0.3rem;
     }
 
-    pre {
-        font-size: 0.85rem;
-        text-decoration: none;
-        display: block;
-        padding: 1rem;
-        overflow-x: scroll;
-        border-radius: 5px;
-        white-space: pre;
-        background-color:var(--code_color)
-    }
+    // pre {
+    //     font-size: 0.85rem;
+    //     text-decoration: none;
+    //     display: block;
+    //     padding: 1rem;
+    //     overflow-x: scroll;
+    //     border-radius: 5px;
+    //     white-space: pre;
+    //     background-color:var(--code_color)
+    // }
 
-    pre code {
-        color: var(--post_text);
-        background-color: #ffffff00;
-        padding: 0;
-        border: none;
-    }
-    code {
-        color: var(--inlinecode_text);
+    // pre code {
+    //     color: var(--post_text);
+    //     background-color: #ffffff00;
+    //     padding: 0;
+    //     border: none;
+    // }
+    // code {
+    //     color: var(--inlinecode_text);
+    //     padding: .2em .4em;
+    //     border-radius: 3px;
+    //     font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+    //     font-size: .85rem;
+    //     background-color: var(--code_color2);
+    // }
+
+    code, tt {
+        // color: var(--inlinecode_text);
+        margin: 0 2px;
         padding: .2em .4em;
-        border-radius: 3px;
-        font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+        white-space: nowrap;
+        border: 1px solid #eaeaea;
+        // background-color: #f8f8f8;
+        border-radius: 3px; 
         font-size: .85rem;
-        background-color: var(--code_color2);
+        font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
     }
+      
+      pre code {
+        margin: 0;
+        padding: 0;
+        white-space: pre;
+        border: none;
+        background: transparent; }
+      
+      .highlight pre {
+        // background-color: #f8f8f8;
+        border: 0.1px solid #cccccc;
+        font-size: 13px;
+        line-height: 19px;
+        overflow: auto;
+        padding: 23px 15px;
+        border-radius: 5px;
+        // &::-webkit-scrollbar { display: none; }
+    }
+      
+      pre {
+        // background-color: #f8f8f8;
+        border: 1px solid #c4c4c4;
+        font-size: 13px;
+        line-height: 19px;
+        overflow: auto;
+        padding: 6px 10px;
+        border-radius: 3px; }
+        pre code, pre tt {
+          background-color: transparent;
+          border: none; }
 
 
     img {
@@ -788,6 +830,36 @@ hr.onlymobile {
         background: var(--blockquote);
         padding: 1rem 1rem 1rem 2rem;
     }
+    
+      
+      table {
+        -webkit-border-horizontal-spacing: 0px;
+        -webkit-border-vertical-spacing: 0px;
+        margin :25px 10px;
+        padding: 0; }
+        table tr {
+          border-top: 0.1px solid #cccccc;
+          background-color: white;
+          margin: 0;
+          padding: 0; }
+          table tr:nth-child(2n) {
+            background-color: #f8f8f8; }
+          table tr th {
+            font-weight: bold;
+            border: 0.1px solid #cccccc;
+            text-align: left;
+            margin: 0;
+            padding: 6px 13px; 
+        }
+          table tr td {
+            border: 0.1px solid #cccccc;
+            text-align: left;
+            margin: 0;
+            padding: 6px 13px; }
+          table tr th :first-child, table tr td :first-child {
+            margin-top: 0; }
+          table tr th :last-child, table tr td :last-child {
+            margin-bottom: 0; }
 
     dfn {
         border-bottom: dashed 1px var(--job_font);
