--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -189,7 +189,7 @@ img {
     &.p{display:block;margin:0 auto;width:100%;};
 }  
 
-img + em {
+img + em, .fig{
     display: block;
     text-align: center;
     color:grey;
