--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: page
 ---
 
 <div class="post">
+  <div class="progress-bar"></div>
+  <a id="back-to-top"></a>
   <div>
     {% if page.title %}
     <p class="post_title">{{ page.title }}</p>
