--- a/_includes/js.html
+++ b/_includes/js.html
@@ -72,13 +72,11 @@
     var backToTop = $('#back-to-top');
     $(window).scroll(function() {
         var st = $(window).scrollTop()
-        if (st > $('main').height()/8) {
+        if (st > $('main').height()/8 && st < lastScrollTop) {
             backToTop.addClass('show');
         } else {
             backToTop.removeClass('show');
         }
-        if(st > lastScrollTop) 
-            backToTop.removeClass('show');
         lastScrollTop = st;
     });
 
