--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="author" content="{{ site.user.name }}">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta name="viewport" content="width=device-width user-scalable=0;"/>
   <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}" media="all">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}"
